# eduly

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/: processing.ipynb
examples/agent_workspace/animation_workspace/: scene.py
examples/agent_workspace/manim_docs/: reference.md  tutorials_guides.md
examples/agent_workspace/workspace/: scene.py
examples/attention_is_all_you_need/cached_outputs/: attention_is_all_you_need_breakdown.pkl  attention_is_all_you_need_storyboard_0.pkl  attention_is_all_you_need_storyboard_1.pkl  attention_is_all_you_need_storyboard_2.pkl  attention_is_all_you_need_storyboard_3.pkl  attention_is_all_you_need_storyboard_4.pkl  attention_is_all_you_need_storyboard_5.pkl  attention_is_all_you_need_storyboard_6.pkl
examples/deepseek_mhc_renders/: deepseek_mhc_breakdown.pkl  deepseek_mhc_gemini_3_flash_storyboard_1.pkl  deepseek_mhc_gemini_3_flash_storyboard_4.pkl  deepseek_mhc_gemini_3_flash_storyboard_6.pkl  deepseek_mhc_gemini_3_flash_storyboard_9.pkl
notebooks/prototyping/: 1_breakdown_and_storyboard.ipynb  2_manim_coder_agent.ipynb  attention_is_all_you_need_gemini_3_flash_breakdown.pkl  attention_is_all_you_need_gemini_3_flash_storyboard_1.pkl  attention_is_all_you_need_gemini_3_flash_storyboard_2.pkl  attention_is_all_you_need_gemini_3_flash_storyboard_3.pkl  attention_is_all_you_need_gemini_3_flash_storyboard_5.pkl
notebooks/prototyping/agent_workspace/: horizontal_barchart_test.py  research_barchart.py
src/: __init__.py
src/eduly/: __init__.py  client.py  models.py
src/eduly/prompts/: __init__.py  (+3 more)
(+286 files in other folders)
